Java 8 Compatibility - Path#of calls were changed to Paths#get